--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="contact">
         <h2>Contact Us</h2>
         <p>Email: <a href="mailto:crucibleanish@gmail.com">crucibleanish@gmail.com</a></p>
-        <p>Phone: <a href="tel:+18452083581">845-208-3581</a></p>
+        <p>Phone: <a href="tel:+18452083581">+91-84520 83581</a></p>
     </div>
 
     <!-- Footer Section -->
