--- a/index.html
+++ b/index.html
@@ -98,30 +98,66 @@
             padding: 0;
             background-color: #f5f5f5;
             color: #333;
+            display: flex;
         }
-        header {
+
+        /* Left Navigation Section */
+        .sidebar {
+            width: 200px;
             background-color: #2c3e50;
-            padding: 20px;
-            text-align: center;
             color: white;
-        }
-        header h1 {
-            margin: 0;
-        }
-        .main {
             padding: 20px;
-            text-align: center;
+            position: fixed;
+            height: 100%;
         }
-        .main h2 {
-            color: #2980b9;
-        }
-        .summary {
-            max-width: 800px;
-            margin: 20px auto;
+        .sidebar a {
+            display: block;
             padding: 10px;
-            background-color: #ecf0f1;
-            border-radius: 10px;
+            color: white;
+            text-decoration: none;
+            margin: 10px 0;
         }
+        .sidebar a:hover {
+            background-color: #2980b9;
+        }
+
+        /* Main Content */
+        .main {
+            margin-left: 220px; /* Space for sidebar */
+            padding: 20px;
+        }
+
+        /* Skills Section with Effects */
+        .skills {
+            text-align: center;
+            margin-top: 50px;
+        }
+
+        .skills h1 {
+            font-size: 3em;
+            margin-bottom: 10px;
+            color: #2c3e50;
+            animation: fadeIn 1s ease-in-out;
+        }
+
+        .skills p {
+            font-size: 1.5em;
+            color: #2980b9;
+            animation: slideIn 1s ease-in-out;
+        }
+
+        /* Animations */
+        @keyframes fadeIn {
+            0% { opacity: 0; }
+            100% { opacity: 1; }
+        }
+
+        @keyframes slideIn {
+            0% { transform: translateX(-100px); opacity: 0; }
+            100% { transform: translateX(0); opacity: 1; }
+        }
+
+        /* Contact Section */
         .contact {
             background-color: #2c3e50;
             color: white;
@@ -132,6 +168,7 @@
             color: #3498db;
             text-decoration: none;
         }
+
         footer {
             text-align: center;
             padding: 10px;
@@ -142,25 +179,50 @@
 </head>
 <body>
 
-    <!-- Header Section -->
-    <header>
-        <h1>Echo Flare Digital</h1>
-        <p>Your Partner in Social Media Marketing</p>
-    </header>
+    <!-- Sidebar Section -->
+    <div class="sidebar">
+        <a href="#about">Section 1: About Us</a>
+        <a href="#form">Section 2: Problem Form</a>
+        <a href="#advertise">Section 3: Advertise</a>
+    </div>
 
     <!-- Main Content Section -->
     <div class="main">
-        <h2>About Us</h2>
-        <div class="summary">
-            <p>At <strong>Echo Flare Digital</strong>, we specialize in social media marketing tailored to coaches and consultants. Our mission is to provide affordable and effective marketing strategies through targeted social media campaigns. With a focus on driving measurable results, we help you grow your client base and elevate your brand’s visibility. Trust us to boost your online presence and take your business to the next level.</p>
+        <!-- Skills Section -->
+        <div class="skills">
+            <h1>Master of Meta Ads & Advertising</h1>
+            <p>Driving impactful results with tailored social media marketing strategies.</p>
+            <h1>Content Creation Expert</h1>
+            <p>Building engaging content to capture your audience's attention and grow your brand.</p>
+        </div>
+
+        <!-- About Us Section -->
+        <div id="about">
+            <h2>About Us</h2>
+            <p>At <strong>Echo Flare Digital</strong>, we specialize in social media marketing tailored to coaches and consultants...</p>
+        </div>
+
+        <!-- Section 2: Google Form -->
+        <div id="form">
+            <h2>Problem Submission Form</h2>
+            <p>Fill out this form to let us know the challenges you face as a coach or consultant:</p>
+            <!-- Embed Google Form -->
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdXNxxxxxxxxxxxxxxxxxxxx/formResponse" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        </div>
+
+        <!-- Section 3: Advertise -->
+        <div id="advertise">
+            <h2>Advertise with Us</h2>
+            <p>Click the button below to explore how we can help advertise your brand through effective social media marketing.</p>
+            <a href="#contact" style="background-color: #3498db; padding: 10px 20px; color: white; text-decoration: none; border-radius: 5px;">Advertise Now</a>
         </div>
     </div>
 
     <!-- Contact Section -->
-    <div class="contact">
+    <div class="contact" id="contact">
         <h2>Contact Us</h2>
         <p>Email: <a href="mailto:crucibleanish@gmail.com">crucibleanish@gmail.com</a></p>
-        <p>Phone: <a href="tel:+18452083581">+91-84520 83581</a></p>
+        <p>Phone: <a href="tel:+18452083581">845-208-3581</a></p>
     </div>
 
     <!-- Footer Section -->
