Updated index.html styles.css script.js with new code and design

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Echo Flare Digital - Digital Marketing Solutions</title>
-    <link rel="stylesheet" href="style.css"> <!-- Link to external CSS -->
+    <title>Echo Flare Digital</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Landing Page Section -->
@@ -20,46 +20,40 @@
                     <li>Content Creation</li>
                 </ul>
             </div>
-            <a href="#about" class="cta-button">Get Started</a>
+            <p class="cta-intro">Explore our sections to learn more</p>
         </div>
     </section>
 
-    <!-- Sidebar for Navigation -->
+    <!-- Sidebar Navigation -->
     <div class="sidebar">
         <a href="#" onclick="showSection('about')">Section 1: About Us</a>
         <a href="#" onclick="showSection('form')">Section 2: Problem Submission Form</a>
         <a href="#" onclick="showSection('advertise')">Section 3: Advertise with Us</a>
     </div>
 
-    <!-- Main Content Sections -->
-    <div class="main">
+    <!-- Hidden Sections -->
+    <div class="content">
         <!-- Section 1: About Us -->
-        <section id="about" class="section content-section hidden">
+        <section id="about" class="content-section hidden">
             <h2>About Us</h2>
-            <p>We specialize in social media marketing tailored to coaches and consultants. Our mission is to provide affordable and effective marketing strategies through targeted social media campaigns. With a focus on driving measurable results, we help you grow your client base and elevate your brand’s visibility.</p>
+            <p>We specialize in social media marketing tailored to coaches and consultants. Our mission is to provide affordable and effective marketing strategies through targeted social media campaigns.</p>
         </section>
 
-        <!-- Section 2: Google Form -->
-        <section id="form" class="section content-section hidden">
+        <!-- Section 2: Problem Submission Form -->
+        <section id="form" class="content-section hidden">
             <h2>Problem Submission Form</h2>
             <p>Fill out this form to let us know about the challenges you face as a coach or consultant:</p>
             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdXNxxxxxxxxxxxxxxxxxxxx/formResponse" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </section>
 
         <!-- Section 3: Advertise with Us -->
-        <section id="advertise" class="section content-section hidden">
+        <section id="advertise" class="content-section hidden">
             <h2>Advertise with Us</h2>
             <p>We specialize in creating highly targeted social media ad campaigns for coaches and consultants. Click the button below to explore how we can help advertise your brand through effective social media marketing.</p>
             <a href="#contact" class="cta-button">Start Advertising</a>
         </section>
     </div>
 
-    <!-- Footer Section -->
-    <footer>
-        <p>&copy; 2024 Echo Flare Digital - All Rights Reserved</p>
-    </footer>
-
-    <!-- Link to external JavaScript -->
     <script src="script.js"></script>
 </body>
 </html>
